[gd_scene load_steps=6 format=3 uid="uid://bguruyv0rhunf"]

[ext_resource type="PackedScene" uid="uid://u5q5a7xl7gpt" path="res://player/player.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://bt0tnmdih3lea" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://hrwso57entg" path="res://game_ui.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bnvr4tc24o5q0" path="res://background.tscn" id="5_lquwl"]
[ext_resource type="Script" uid="uid://ddebscdi2xrrq" path="res://clear_border.gd" id="6_7mycd"]

[node name="Node2D" type="Node2D"]
process_mode = 1
script = ExtResource("1_h2yge")

[node name="Player" parent="." instance=ExtResource("1_0xm2m")]
position = Vector2(0, 512)

[node name="Camera" type="Camera2D" parent="."]
position = Vector2(192, 208)

[node name="GameUI" parent="." instance=ExtResource("1_ig7tw")]
offset_left = -448.0
offset_top = -272.0
offset_right = -448.0
offset_bottom = -272.0

[node name="DebugBulletCount" type="Label" parent="GameUI"]
unique_name_in_owner = true
z_index = 100
layout_mode = 0
offset_left = 864.0
offset_top = 16.0
offset_right = 1006.0
offset_bottom = 39.0
text = "DebugBulletCount"

[node name="DebugFPS" type="Label" parent="GameUI"]
unique_name_in_owner = true
z_index = 100
layout_mode = 0
offset_left = 864.0
offset_top = 48.0
offset_right = 942.0
offset_bottom = 71.0
text = "DebugFPS"

[node name="Background" parent="." instance=ExtResource("5_lquwl")]

[node name="SubViewportContainer" parent="Background" index="2"]
z_index = -500
offset_left = -384.0
offset_top = -240.0
offset_right = 384.0
offset_bottom = 656.0

[node name="SubViewport" parent="Background/SubViewportContainer" index="0"]
size = Vector2i(768, 896)

[node name="ClearBorder" type="Area2D" parent="."]
position = Vector2(0, 192)
collision_layer = 16
collision_mask = 6
script = ExtResource("6_7mycd")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ClearBorder"]
position = Vector2(0, -192)
build_mode = 1
polygon = PackedVector2Array(-512, -368, -512, 784, 512, 784, 512, -368)

[node name="MovementBorder" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MovementBorder"]
build_mode = 1
polygon = PackedVector2Array(-384, -240, -384, 656, 384, 656, 384, -240)

[connection signal="area_entered" from="ClearBorder" to="ClearBorder" method="_on_area_entered"]
[connection signal="body_exited" from="ClearBorder" to="ClearBorder" method="_on_body_exited"]

[editable path="Background"]
